force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AAV_Asset_Availability_API_Errors__c.field-meta.xml
<CustomField>
    <fullName>AAV_Asset_Availability_API_Errors__c</fullName>
    <description>Field will be used to capture any errors from Asset availability API</description>
    <label>Asset Availability API Errors</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>