force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AAV_Delivery_Availability__c.field-meta.xml
<CustomField>
    <fullName>AAV_Delivery_Availability__c</fullName>
    <description>Field will be used to identify if delivery/start date is selected from the available dates fetched from asset availability API.</description>
    <label>Delivery Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Selected Delivery is as per WM Availability, selected date is within SLA days</fullName>
            </value>
            <value>
                <fullName>Selected Delivery is as per WM Availability, selected date is beyond SLA days but within 30 days</fullName>
            </value>
            <value>
                <fullName>Selected Delivery is NOT as per WM Availability, selected date is within SLA days</fullName>
            </value>
            <value>
                <fullName>Selected Delivery is NOT as per WM Availability, selected date is beyond SLA days but within 30 days</fullName>
            </value>
            <value>
                <fullName>Selected Delivery is NOT as per WM Availability, selected date is beyond 30 days</fullName>
            </value>
            <value>
                <fullName>Selected Delivery is NOT as per WM Availability, as this is a back dated order</fullName>
            </value>
            <value>
                <fullName>WM NOT available to Deliver in the area, selected date is within SLA days</fullName>
            </value>
            <value>
                <fullName>WM NOT available to Deliver in the area, selected date is beyond SLA days but within 30 days</fullName>
            </value>
            <value>
                <fullName>WM NOT available to Deliver in the area, selected date is beyond 30 days</fullName>
            </value>
            <value>
                <fullName>WM NOT available to Deliver in the area, as this is a back dated order</fullName>
            </value>
            <value>
                <fullName>Availability could not be confirmed as there is no response from the API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>