force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AAV_Delivery_Override_Comment__c.field-meta.xml
<CustomField>
    <fullName>AAV_Delivery_Override_Comment__c</fullName>
    <description>This field will be used to capture the comment by end user for selecting non-available delivery day</description>
    <label>Delivery Override Comment</label>
    <type>TextArea</type>
</CustomField>