force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AAV_Delivery_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>AAV_Delivery_Override_Reason__c</fullName>
    <description>This field will be capture in case of un-available days selected for Delivery</description>
    <label>Delivery Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Desired Date</fullName>
            </value>
            <value>
                <fullName>WM Confirmed Availability</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>