force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AAV_Priority__c.field-meta.xml
<CustomField>
    <fullName>AAV_Priority__c</fullName>
    <description>This field used in STP rule evaluation time.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>