force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AAV_Requested_AdditionalServicesAccessor__c.field-meta.xml
<CustomField>
    <fullName>AAV_Requested_AdditionalServicesAccessor__c</fullName>
    <label>Requested Additional Services &amp; Accessor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested Additional Services &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>NOT Requested Additional Services &amp; Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>