force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AAV_Service_Availability__c.field-meta.xml
<CustomField>
    <fullName>AAV_Service_Availability__c</fullName>
    <label>Service Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Selected Service is as per WM Availability</fullName>
            </value>
            <value>
                <fullName>Selected Service is NOT as per WM Availability</fullName>
            </value>
            <value>
                <fullName>WM NOT available to Service in the area</fullName>
            </value>
            <value>
                <fullName>Availability could not be confirmed as there is no response from the API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>