force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AAV_Service_Day_Override_Comment__c.field-meta.xml
<CustomField>
    <fullName>AAV_Service_Day_Override_Comment__c</fullName>
    <label>Service Day Override Comment</label>
    <type>TextArea</type>
</CustomField>