force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AAV_Service_Days_Unavailable__c.field-meta.xml
<CustomField>
    <fullName>AAV_Service_Days_Unavailable__c</fullName>
    <label>Service Days Unavailable</label>
    <length>250</length>
    <type>Text</type>
</CustomField>