force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AAV_Service_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>AAV_Service_Override_Reason__c</fullName>
    <label>Service Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Container not accessible on suggested days</fullName>
            </value>
            <value>
                <fullName>High waste volume on specific day(s)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>