force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AccountingBusinessUnitNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountingBusinessUnitNumber__c</fullName>
    <label>AccountingBusinessUnitNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>