force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset generated from Quote Line</description>
    <label>AssetId</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Quote Lines (AssetId)</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>