force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Availability_Flag__c.field-meta.xml
<CustomField>
    <fullName>Availability_Flag__c</fullName>
    <description>This field used in Assert Availability</description>
    <label>Availability Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WM Availability Confirmed</fullName>
            </value>
            <value>
                <fullName>WM Availability NOT Confirmed - Service, Delivery, Accessories</fullName>
            </value>
            <value>
                <fullName>WM Availability NOT Confirmed - Service, Delivery</fullName>
            </value>
            <value>
                <fullName>WM Availability NOT Confirmed - Service, Accessories</fullName>
            </value>
            <value>
                <fullName>WM Availability NOT Confirmed - Service</fullName>
            </value>
            <value>
                <fullName>WM Availability NOT Confirmed - Delivery, Accessories</fullName>
            </value>
            <value>
                <fullName>WM Availability NOT Confirmed - Delivery</fullName>
            </value>
            <value>
                <fullName>WM Availability NOT Confirmed - Accessories</fullName>
            </value>
            <value>
                <fullName>WM Availability Assumed - Service, Delivery, Accessories</fullName>
            </value>
            <value>
                <fullName>WM Availability Assumed - Service, Delivery</fullName>
            </value>
            <value>
                <fullName>WM Availability Assumed - Delivery, Accessories</fullName>
            </value>
            <value>
                <fullName>WM Availability Assumed - Delivery</fullName>
            </value>
            <value>
                <fullName>NON WM Availability NOT Confirmed - Service, Delivery, Accessories</fullName>
            </value>
            <value>
                <fullName>NON WM Availability NOT Confirmed - Service, Delivery</fullName>
            </value>
            <value>
                <fullName>NON WM Availability Assumed - Service, Delivery</fullName>
            </value>
            <value>
                <fullName>Availability could not be confirmed as there is no response from the API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>