force-app/main/default/objects/SBQQ__QuoteLine__c/fields/BundleProcuredStatus__c.field-meta.xml
<CustomField>
    <fullName>BundleProcuredStatus__c</fullName>
    <description>This field will show the procured status of a Product Bundle.</description>
    <label>Bundle Procured Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>