force-app/main/default/objects/SBQQ__QuoteLine__c/fields/BusinessUnitNumber__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitNumber__c</fullName>
    <label>BusinessUnitNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>