force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bypass_Acorn_Integration__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Acorn_Integration__c</fullName>
    <formula>SBQQ__Product__r.Bypass_Acorn_Integration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bypass Acorn Integration</label>
    <type>Checkbox</type>
</CustomField>