force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ByPassFunctionality__c.field-meta.xml
<CustomField>
    <fullName>ByPassFunctionality__c</fullName>
    <label>ByPassFunctionality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update_Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>