force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ByPassMASServiceChange__c.field-meta.xml
<CustomField>
    <fullName>ByPassMASServiceChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassMASServiceChange</label>
    <type>Checkbox</type>
</CustomField>