force-app/main/default/objects/SBQQ__QuoteLine__c/fields/BypassPriceReview__c.field-meta.xml
<CustomField>
    <fullName>BypassPriceReview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassPriceReview</label>
    <type>Checkbox</type>
</CustomField>