force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Certificate_of_Destruction__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Destruction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Destruction</label>
    <type>Checkbox</type>
</CustomField>