force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Certificate_of_Disposal__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Disposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Disposal</label>
    <type>Checkbox</type>
</CustomField>