force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Client_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference_Number__c</fullName>
    <label>Client Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>