force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ClientCostCenter__c.field-meta.xml
<CustomField>
    <fullName>ClientCostCenter__c</fullName>
    <label>ClientCostCenter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>