force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ClientGLAccount__c.field-meta.xml
<CustomField>
    <fullName>ClientGLAccount__c</fullName>
    <label>ClientGLAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>