force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CompanyCategoryName__c.field-meta.xml
<CustomField>
    <fullName>CompanyCategoryName__c</fullName>
    <description>Store the Company Category Name</description>
    <label>Company Category</label>
    <length>250</length>
    <type>Text</type>
</CustomField>