force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CompanyProjectName__c.field-meta.xml
<CustomField>
    <fullName>CompanyProjectName__c</fullName>
    <formula>SBQQ__Quote__r.Project__r.ProjectCode_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompanyProjectName</label>
    <type>Text</type>
</CustomField>