force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Container_in_a_Restricted_Area__c.field-meta.xml
<CustomField>
    <fullName>Container_in_a_Restricted_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Container in a Restricted Area</label>
    <type>Checkbox</type>
</CustomField>