force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Container_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Container_Service_Charge__c</fullName>
    <label>Container Service Charge Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>