force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Contracted_Price__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Price__c</fullName>
    <formula>NOT(ISBLANK(SBQQ__ContractedPrice__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted Price</label>
    <type>Checkbox</type>
</CustomField>