force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ContractNotes__c.field-meta.xml
<CustomField>
    <fullName>ContractNotes__c</fullName>
    <label>ContractNotes</label>
    <type>TextArea</type>
</CustomField>