force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Core_Service__c.field-meta.xml
<CustomField>
    <fullName>Core_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core Service</label>
    <type>Checkbox</type>
</CustomField>