force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Cost_Override_Description__c.field-meta.xml
<CustomField>
    <fullName>Cost_Override_Description__c</fullName>
    <description>This field is being created as a part of SDT-26002 to capture Cost Override reason change comments</description>
    <label>Cost Override Description</label>
    <type>TextArea</type>
</CustomField>