force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Cost_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cost_Override_Reason__c</fullName>
    <description>This field is created as a part of SDT-26002 to capture Cost Override changes</description>
    <label>Cost Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendor changed - modelled rate</fullName>
            </value>
            <value>
                <fullName>Vendor changed - selected vendor could not perform the service</fullName>
            </value>
            <value>
                <fullName>Vendor changed - selected vendor was not the incumbent</fullName>
            </value>
            <value>
                <fullName>Vendor changed - selected vendor could not provide Escalated service.</fullName>
            </value>
            <value>
                <fullName>Vendor changed - selected vendor did not accept the rates</fullName>
            </value>
            <value>
                <fullName>Vendor changed - vendor cost exceeded client NTE</fullName>
            </value>
            <value>
                <fullName>Vendor changed - API returned 3P, client requires WM</fullName>
            </value>
            <value>
                <fullName>Vendor provided different rates</fullName>
            </value>
            <value>
                <fullName>Per Sales</fullName>
            </value>
            <value>
                <fullName>Service requested is part of closed market</fullName>
            </value>
            <value>
                <fullName>Core Service Amount incorrect</fullName>
            </value>
            <value>
                <fullName>Ancillary amount was incorrect per PFE/CMT action and value</fullName>
            </value>
            <value>
                <fullName>Ancillary amount was incorrect per PFE/CMT comment</fullName>
            </value>
            <value>
                <fullName>Amount updated per Business Rule</fullName>
            </value>
            <value>
                <fullName>Schedule changed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>