force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Cost_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Cost_Unit_of_Measure__c</fullName>
    <label>Cost Unit of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Occurrence_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>BNDL</fullName>
                <label>Bundle</label>
            </value>
            <value>
                <fullName>DYS</fullName>
                <label>Days</label>
            </value>
            <value>
                <fullName>ECH</fullName>
                <label>Each</label>
            </value>
            <value>
                <fullName>EV</fullName>
                <label>Event</label>
            </value>
            <value>
                <fullName>FT</fullName>
                <label>Feet</label>
            </value>
            <value>
                <fullName>GL</fullName>
                <label>Gallons</label>
            </value>
            <value>
                <fullName>HR</fullName>
                <label>Hourly</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>Inches</label>
            </value>
            <value>
                <fullName>KT</fullName>
                <label>Key Turn</label>
            </value>
            <value>
                <fullName>MT</fullName>
                <label>Metric Tonnes</label>
            </value>
            <value>
                <fullName>MTH</fullName>
                <label>Months</label>
            </value>
            <value>
                <fullName>LB</fullName>
                <label>Pounds</label>
            </value>
            <value>
                <fullName>QTR</fullName>
                <label>Quarters</label>
            </value>
            <value>
                <fullName>TN</fullName>
                <label>Tons</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>Weeks</label>
            </value>
            <value>
                <fullName>YD</fullName>
                <label>Yard</label>
            </value>
            <value>
                <fullName>YRS</fullName>
                <label>Years</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>