force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostIncrement1__c.field-meta.xml
<CustomField>
    <fullName>CostIncrement1__c</fullName>
    <label>Cost Increment 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>