force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostIncrement2__c.field-meta.xml
<CustomField>
    <fullName>CostIncrement2__c</fullName>
    <label>Cost Increment 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>