force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostIncrement3__c.field-meta.xml
<CustomField>
    <fullName>CostIncrement3__c</fullName>
    <label>Cost Increment 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>