force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostMinQuantity__c.field-meta.xml
<CustomField>
    <fullName>CostMinQuantity__c</fullName>
    <label>Cost Minimum Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>