force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostModelType__c.field-meta.xml
<CustomField>
    <fullName>CostModelType__c</fullName>
    <label>Cost Model Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PER</fullName>
                <label>Per-Unit</label>
            </value>
            <value>
                <fullName>STP</fullName>
                <label>Stepped</label>
            </value>
            <value>
                <fullName>REB</fullName>
                <label>Rebate</label>
            </value>
            <value>
                <fullName>MRG</fullName>
                <label>Margin</label>
            </value>
            <value>
                <fullName>MRS</fullName>
                <label>Margin Stepped</label>
            </value>
            <value>
                <fullName>ZCH</fullName>
                <label>Zero Charge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>