force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostPrice1__c.field-meta.xml
<CustomField>
    <fullName>CostPrice1__c</fullName>
    <label>Stepped Cost 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>