force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostPrice2__c.field-meta.xml
<CustomField>
    <fullName>CostPrice2__c</fullName>
    <label>Stepped Cost 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>