force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostPrice3__c.field-meta.xml
<CustomField>
    <fullName>CostPrice3__c</fullName>
    <label>Stepped Cost 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>