force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostStep01Increment__c.field-meta.xml
<CustomField>
    <fullName>CostStep01Increment__c</fullName>
    <label>CostStep01Increment</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>