force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostStep02Amount__c.field-meta.xml
<CustomField>
    <fullName>CostStep02Amount__c</fullName>
    <label>CostStep02Amount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>