force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostStep02UpTo__c.field-meta.xml
<CustomField>
    <fullName>CostStep02UpTo__c</fullName>
    <label>CostStep02UpTo</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>