force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostStep03UpTo__c.field-meta.xml
<CustomField>
    <fullName>CostStep03UpTo__c</fullName>
    <label>CostStep03UpTo</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>