force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostUpTo1__c.field-meta.xml
<CustomField>
    <fullName>CostUpTo1__c</fullName>
    <label>Cost UpTo 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>