force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostUpTo2__c.field-meta.xml
<CustomField>
    <fullName>CostUpTo2__c</fullName>
    <label>Cost UpTo 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>