force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CostUpTo3__c.field-meta.xml
<CustomField>
    <fullName>CostUpTo3__c</fullName>
    <label>Cost UpTo 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>