force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CreateNotif__c.field-meta.xml
<CustomField>
    <fullName>CreateNotif__c</fullName>
    <label>CreateNotif</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>