force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CustomerApproval__c.field-meta.xml
<CustomField>
    <fullName>CustomerApproval__c</fullName>
    <description>This field is created for SDT-33101, It will capture approval related data for Amendment quotes</description>
    <label>Customer Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>