force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Month__c</fullName>
    <label>Day of Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>