force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposition</label>
    <referenceTo>Disposition__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>