force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DoNotCreateMASTicket__c.field-meta.xml
<CustomField>
    <fullName>DoNotCreateMASTicket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DoNotCreateMASTicket</label>
    <type>Checkbox</type>
</CustomField>