force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DoNotCreateTaskGridTickets__c.field-meta.xml
<CustomField>
    <fullName>DoNotCreateTaskGridTickets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was added for the story SDT-29392</description>
    <label>DoNotCreateTaskGridTickets</label>
    <type>Checkbox</type>
</CustomField>