force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Equipment_Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Schedule_Type__c</fullName>
    <label>Equipment Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equipment_Schedule_Type</valueSetName>
    </valueSet>
</CustomField>