force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Equipment_Side_Doors__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Side_Doors__c</fullName>
    <label>Equipment Side Doors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Side</fullName>
            </value>
            <value>
                <fullName>Both Sides</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>